--- a/Assets/tailwind/input.css
+++ b/Assets/tailwind/input.css
@@ -19,8 +19,18 @@ h1, h2, h3 {
 }
 
 input[type="text"], select {
-    @apply w-full border px-2.5 py-1.5 rounded border-gray-300 bg-white text-gray-900 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-200 outline-0
+    @apply w-full border px-2.5 py-1.5 rounded-lg border-gray-300 bg-white text-gray-900 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-200 outline-0
 }
 input[type="text"]:focus, select:focus {
     @apply border-primary ring-2 ring-primary/50
+}
+
+.nav-link {
+    @apply flex flex-col items-center gap-1 px-4 py-2 
+}
+.nav-link.active {
+    @apply text-primary
+}
+.nav-link.active i {
+    font-weight: 900 !important; /* maakt elke FA icon solid */
 }
