--- a/wwwroot/css/tailwind.css
+++ b/wwwroot/css/tailwind.css
@@ -201,11 +201,17 @@
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
   .left-1 {
     left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
+  }
+  .z-40 {
+    z-index: 40;
   }
   .z-50 {
     z-index: 50;
@@ -274,9 +280,6 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
-  }
   .line-clamp-2 {
     overflow: hidden;
     display: -webkit-box;
@@ -343,6 +346,9 @@
   }
   .w-8 {
     width: calc(var(--spacing) * 8);
+  }
+  .w-56 {
+    width: calc(var(--spacing) * 56);
   }
   .w-80 {
     width: calc(var(--spacing) * 80);
@@ -456,17 +462,14 @@
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
-  .gap-1\.5 {
-    gap: calc(var(--spacing) * 1.5);
-  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
+  .gap-2\.5 {
+    gap: calc(var(--spacing) * 2.5);
+  }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
-  }
-  .gap-4 {
-    gap: calc(var(--spacing) * 4);
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
@@ -476,13 +479,6 @@
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
-  .space-y-6 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
   .overflow-auto {
@@ -502,9 +498,6 @@
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
-  }
-  .rounded-3xl {
-    border-radius: 2rem;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -562,14 +555,8 @@
   .bg-\[\#cbcbcb\] {
     background-color: #cbcbcb;
   }
-  .bg-\[\#e0e0e0\] {
-    background-color: #e0e0e0;
-  }
   .bg-black {
     background-color: #000;
-  }
-  .bg-black\/50 {
-    background-color: color-mix(in oklab, #000 50%, transparent);
   }
   .bg-black\/60 {
     background-color: color-mix(in oklab, #000 60%, transparent);
@@ -631,12 +618,6 @@
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
   }
-  .px-3 {
-    padding-inline: calc(var(--spacing) * 3);
-  }
-  .px-4 {
-    padding-inline: calc(var(--spacing) * 4);
-  }
   .py-0 {
     padding-block: calc(var(--spacing) * 0);
   }
@@ -648,9 +629,6 @@
   }
   .py-1\.5 {
     padding-block: calc(var(--spacing) * 1.5);
-  }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
   }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
@@ -695,6 +673,10 @@
   }
   .text-\[10px\] {
     font-size: 10px;
+  }
+  .leading-3 {
+    --tw-leading: calc(var(--spacing) * 3);
+    line-height: calc(var(--spacing) * 3);
   }
   .leading-tight {
     --tw-leading: var(--leading-tight);
@@ -764,26 +746,6 @@
   }
   .shadow-\[1px_2px_\#00000021_inset\] {
     --tw-shadow: 1px 2px var(--tw-shadow-color, #00000021) inset;
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[4px_4px_8px_\#bebebe\,-4px_-4px_8px_\#ffffff\] {
-    --tw-shadow: 4px 4px 8px var(--tw-shadow-color, #bebebe), -4px -4px 8px var(--tw-shadow-color, #ffffff);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[6px_6px_12px_\#bebebe\,-6px_-6px_12px_\#ffffff\] {
-    --tw-shadow: 6px 6px 12px var(--tw-shadow-color, #bebebe), -6px -6px 12px var(--tw-shadow-color, #ffffff);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[8px_8px_16px_\#bebebe\,-8px_-8px_16px_\#ffffff\] {
-    --tw-shadow: 8px 8px 16px var(--tw-shadow-color, #bebebe), -8px -8px 16px var(--tw-shadow-color, #ffffff);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[8px_8px_16px_\#bebebe\,inset_-8px_-8px_16px_\#ffffff\] {
-    --tw-shadow: 8px 8px 16px var(--tw-shadow-color, #bebebe), inset -8px -8px 16px var(--tw-shadow-color, #ffffff);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[inset_4px_4px_8px_\#bebebe\,inset_-4px_-4px_8px_\#ffffff\] {
-    --tw-shadow: inset 4px 4px 8px var(--tw-shadow-color, #bebebe), inset -4px -4px 8px var(--tw-shadow-color, #ffffff);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-inner {
@@ -876,34 +838,11 @@
       }
     }
   }
-  .hover\:scale-110 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 110%;
-        --tw-scale-y: 110%;
-        --tw-scale-z: 110%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
-      }
-    }
-  }
   .hover\:border-gray-300 {
     &:hover {
       @media (hover: hover) {
         border-color: oklch(87% 0 0);
       }
-    }
-  }
-  .hover\:bg-gray-300 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: oklch(87% 0 0);
-      }
-    }
-  }
-  .active\:shadow-\[inset_4px_4px_8px_\#bebebe\,inset_-4px_-4px_8px_\#ffffff\] {
-    &:active {
-      --tw-shadow: inset 4px 4px 8px var(--tw-shadow-color, #bebebe), inset -4px -4px 8px var(--tw-shadow-color, #ffffff);
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
   .dark\:border-none {
@@ -932,19 +871,9 @@
       border-color: oklch(26.9% 0 0);
     }
   }
-  .dark\:border-t-gray-700 {
-    @media (prefers-color-scheme: dark) {
-      border-top-color: oklch(37.1% 0 0);
-    }
-  }
   .dark\:border-t-gray-900 {
     @media (prefers-color-scheme: dark) {
       border-top-color: oklch(20.5% 0 0);
-    }
-  }
-  .dark\:bg-\[\#1e1e1e\] {
-    @media (prefers-color-scheme: dark) {
-      background-color: #1e1e1e;
     }
   }
   .dark\:bg-gray-200 {
@@ -997,58 +926,15 @@
       color: oklch(55.6% 0 0);
     }
   }
-  .dark\:text-white {
-    @media (prefers-color-scheme: dark) {
-      color: #fff;
-    }
-  }
   .dark\:shadow-2xl {
     @media (prefers-color-scheme: dark) {
       --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
-  .dark\:shadow-\[4px_4px_8px_\#151515\,-4px_-4px_8px_\#262626\] {
-    @media (prefers-color-scheme: dark) {
-      --tw-shadow: 4px 4px 8px var(--tw-shadow-color, #151515), -4px -4px 8px var(--tw-shadow-color, #262626);
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .dark\:shadow-\[6px_6px_12px_\#151515\,-6px_-6px_12px_\#262626\] {
-    @media (prefers-color-scheme: dark) {
-      --tw-shadow: 6px 6px 12px var(--tw-shadow-color, #151515), -6px -6px 12px var(--tw-shadow-color, #262626);
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .dark\:shadow-\[8px_8px_16px_\#151515\,-8px_-8px_16px_\#262626\] {
-    @media (prefers-color-scheme: dark) {
-      --tw-shadow: 8px 8px 16px var(--tw-shadow-color, #151515), -8px -8px 16px var(--tw-shadow-color, #262626);
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .dark\:shadow-\[8px_8px_16px_\#151515\,inset_-8px_-8px_16px_\#262626\] {
-    @media (prefers-color-scheme: dark) {
-      --tw-shadow: 8px 8px 16px var(--tw-shadow-color, #151515), inset -8px -8px 16px var(--tw-shadow-color, #262626);
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .dark\:shadow-\[inset_4px_4px_8px_\#151515\,inset_-4px_-4px_8px_\#262626\] {
-    @media (prefers-color-scheme: dark) {
-      --tw-shadow: inset 4px 4px 8px var(--tw-shadow-color, #151515), inset -4px -4px 8px var(--tw-shadow-color, #262626);
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
   .dark\:ring-offset-gray-900 {
     @media (prefers-color-scheme: dark) {
       --tw-ring-offset-color: oklch(20.5% 0 0);
-    }
-  }
-  .dark\:active\:shadow-\[inset_4px_4px_8px_\#151515\,inset_-4px_-4px_8px_\#262626\] {
-    @media (prefers-color-scheme: dark) {
-      &:active {
-        --tw-shadow: inset 4px 4px 8px var(--tw-shadow-color, #151515), inset -4px -4px 8px var(--tw-shadow-color, #262626);
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
     }
   }
 }
@@ -1103,7 +989,7 @@ h1, h2, h3 {
 }
 input[type="text"], select {
   width: 100%;
-  border-radius: 0.25rem;
+  border-radius: var(--radius-lg);
   border-style: var(--tw-border-style);
   border-width: 1px;
   border-color: oklch(87% 0 0);
@@ -1128,6 +1014,20 @@ input[type="text"]:focus, select:focus {
   --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   --tw-ring-color: color-mix(in oklab, #ee3967 50%, transparent);
+}
+.nav-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: calc(var(--spacing) * 1);
+  padding-inline: calc(var(--spacing) * 4);
+  padding-block: calc(var(--spacing) * 2);
+}
+.nav-link.active {
+  color: #ee3967;
+}
+.nav-link.active i {
+  font-weight: 900 !important;
 }
 @property --tw-translate-x {
   syntax: "*";
