--- a/Components/Fader.razor
+++ b/Components/Fader.razor
@@ -19,12 +19,12 @@
         <div class="absolute left-1/2 -translate-x-1/2 w-[4px] h-full bg-gray-300 dark:bg-gray-700 rounded-full"></div>
 
         <!-- RANGE -->
-        <div class="fader-range absolute left-1/2 -translate-x-1/2 w-[4px] bg-primary rounded-full"
+        <div class="fader-range absolute left-1/2 -translate-x-1/2 w-[4px] bg-primary-500 rounded-full"
              style="height:@RangeHeightPercent%; bottom:0"></div>
 
         <!-- THUMB -->
         <div class="fader-thumb absolute left-1/2 -translate-x-1/2 w-[12px] h-[12px] 
-                    bg-white dark:bg-gray-800 border-2 border-primary rounded-full shadow 
+                    bg-white dark:bg-gray-800 border-2 border-primary-500 rounded-full shadow 
                     translate-y-1/2"
              style="bottom:@ThumbBottomPercent%">
         </div>
