--- a/Components/Pages/Mix.razor
+++ b/Components/Pages/Mix.razor
@@ -73,7 +73,7 @@
                                     border
                         
                                     @(ch.Muted
-                                        ? "bg-primary/30 border-primary text-primary"
+                                        ? "bg-primary-500/30 border-primary-500 text-primary-500"
                                         : "border-gray-300 bg-gray-200 text-gray-500 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400")
                                 ">
                             <i class="@(ch.Muted ? "fad fa-volume-xmark" : "fad fa-volume-high")"></i>
