--- a/Components/MixerCard.razor
+++ b/Components/MixerCard.razor
@@ -1,17 +1,16 @@
 ﻿@using Eggbox.Models
 @using Eggbox.Services
 
-<div class="relative p-3 rounded-2xl overflow-hidden bg-primary/10 backdrop-blur-sm border border-primary transition-transform duration-200 ease-in-out @(isAnimating ? "scale-95 opacity-70" : "scale-100 opacity-100")"
+<div class="relative p-3 rounded-lg overflow-hidden bg-gray-100 border border-gray-200 transition-transform duration-200 ease-in-out @(isAnimating ? "scale-95 opacity-70" : "scale-100 opacity-100")"
      @onclick="SelectAsync">
 
     <div class="transition-opacity duration-300 flex gap-10 items-center w-full">
         <div class="grow">
             <div class="font-medium dark:text-gray-100">@MixerInfo.IpAddress</div>
-            <div class="text-xs dark:text-gray-300 uppercase">@MixerInfo.MixerType</div>
+            <div class="badge">@MixerInfo.MixerType</div>
         </div>
-        <div class="items-center flex gap-1 text-primary">
-            <i class="text-2xl fas fa-circle-play"></i>
-            <span class="font-medium text-sm">Connect</span>
+        <div class="btn">
+            <i class="fas fa-circle-play"></i>Connect
         </div>
     </div>
 </div>
